added method setTimeout

--- a/iRock.html
+++ b/iRock.html
@@ -11,8 +11,11 @@
             if (userName) {
                 alert("Рад вас видеть " + userName + ".");
                 document.getElementById("rockImg").src = "img/rock_happy.png";
-            }
+
         }
+            setTimeout("document.getElementById('rockImg').src='img/rock.png';", 300000);
+        }
+
     </script>
 
 </head>
