--- a/mandango_seats.html
+++ b/mandango_seats.html
@@ -124,7 +124,7 @@
 
     </script>
 </head>
-<body onload="initSeats()" >
+<body onload="initSeats();" >
 <div style="margin-top:75px; text-align:center">
     <img id="seat0"  src="" alt=""/>
     <img id="seat1" src="" alt=""/>
@@ -135,6 +135,8 @@
     <img id="seat6" src="" alt=""/>
     <img id="seat7" src="" alt=""/>
     <img id="seat8" src="" alt=""/></br>
+
+    <input type="button" id="findSeats" value = "Find Seats" onclick = "findSeats();"/>
 
 
 </div>
